--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <title>Hello React</title>
+  <title>Leagueify</title>
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </html>
 <body>
   <div id="app-root">App is loading...</div>
