basic registration page setup

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full" style="height: 100%;">
 <head lang="en">
   <title>Leagueify</title>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <body class="h-full" style="height: 100%;">
+    <div id="app-root" style="height: 100%;" class="h-full">App is loading...</div>
+  </body>
 </html>
-<body>
-  <div id="app-root">App is loading...</div>
-</body>
